Decrease whitespace at top of firstrun page (Bug 620554 - Modify Newsletter Signup on First Run Page)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk@81263 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/3.6/firstrun-page.css
+++ b/style/firefox/3.6/firstrun-page.css
@@ -75,7 +75,7 @@ body {
 
 h1 {
 	margin: 0;
-	padding-top: 124px;
+	padding-top: 50px;
 }
 
 #title-logo {
